# cpp2rust

./: CMakeLists.txt
.github/workflows/: format.yml  run-tests.yml
cpp2rust/: CMakeLists.txt  cpp2rust.cpp  cpp2rust_lib.cpp  cpp2rust_lib.h
cpp2rust/converter/: converter.cpp  converter.h  converter_lib.cpp  converter_lib.h  mapper.cpp  translation_rule.cpp
cpp2rust/converter/models/: converter_refcount.cpp  converter_refcount.h
libcc2rs/src/: rc.rs
rules/algorithm/: src.cpp
rules/array/: src.cpp
rules/brotli/: src.cpp
rules/carray/: src.cpp
rules/deque/: src.cpp
rules/fstream/: src.cpp
rules/initializer_list/: src.cpp
rules/iostream/: src.cpp
rules/limits/: src.cpp
rules/map/: src.cpp
rules/pair/: ir_refcount.json  ir_unsafe.json  src.cpp  tgt_refcount.rs  tgt_unsafe.rs
rules/stdarg/: src.cpp
rules/stdio/: src.cpp
rules/string/: src.cpp
rules/unique_ptr/: src.cpp
rules/vector/: src.cpp
tests/lit/lit/formats/: Cpp2RustTest.py
tests/unit/: expr_as_bool_cpp.cpp  reserved_keywords.cpp  va_arg_chain.c  va_arg_promotion.c  va_arg_struct_ctx.cpp
